--- a/kanban-board/src/App.css
+++ b/kanban-board/src/App.css
@@ -1,38 +1,62 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  position: relative;
+}
+
+.App-logo-top-left {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  width: 100px;
+  padding: 0;
+}
+
+.New-container {
+  position: absolute;
+  width: 800px;
+  height: 80px;
+  top: 117px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 16px;
+  gap: 0;
+  border-radius: 12px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 40px 0px #0000000D;
+  opacity: 1;
+}
+
+.New-container-text {
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  font-weight: bold;
+  color: #000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.New-container-button {
+  width: 100px;
+  height: 40px;
+  padding: 8px 16px;
+  border-radius: 6px;
+  opacity: 1;
+  background: #8A31E5;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  cursor: pointer;
+  transform: rotate(-0.06deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
