--- a/kanban-board/src/App.css
+++ b/kanban-board/src/App.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
+  background-color: #f5f5f5; 
 }
 
 .App-logo-top-left {
@@ -16,15 +17,13 @@
 }
 
 .New-container {
-  position: absolute;
-  width: 800px;
-  height: 80px;
-  top: 117px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 16px;
+  position: relative; 
+  width: 1000px;
+  height: 96.13px;
+  margin-top: 50px; 
+  
   gap: 0;
-  border-radius: 12px 0 0 0;
+  border-radius: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,8 +34,8 @@
 
 .New-container-text {
   padding: 0;
-  margin: 0;
-  font-size: 14px;
+  margin: 25px;
+  font-size: 20px;
   font-weight: bold;
   color: #000;
   white-space: nowrap;
@@ -47,7 +46,8 @@
 .New-container-button {
   width: 100px;
   height: 40px;
-  padding: 8px 16px;
+  margin-right: 15px;
+
   border-radius: 6px;
   opacity: 1;
   background: #8A31E5;
@@ -60,3 +60,5 @@
   justify-content: center;
   text-align: center;
 }
+
+
