--- a/kanban-board/src/App.css
+++ b/kanban-board/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   display: flex;
   flex-direction: column;
@@ -67,6 +66,7 @@
     flex-direction: column;
     height: auto;
     padding: 20px;
+    margin-top: 80px;
     box-sizing: border-box;
   }
 
@@ -77,7 +77,7 @@
   }
 
   .New-container-button {
-    width: 100%;
+    width: 120px;
     margin: 10px 0 0 0;
     height: 50px;
   }
